# open_manipulator_p

./: .open_manipulator_p.rosinstall  .open_manipulator_pro.rosinstall  .travis.yml  README.md  open_manipulator_p.repos  open_manipulator_pro.repos
open_manipulator_p/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_control_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_control_gui/include/open_manipulator_p_control_gui/: main_window.hpp  qnode.hpp
open_manipulator_p_control_gui/launch/: open_manipulator_p_control_gui.launch
open_manipulator_p_control_gui/src/: main.cpp  main_window.cpp  qnode.cpp
open_manipulator_p_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_controller/include/open_manipulator_p_controller/: open_manipulator_p_controller.h  open_manipulator_p_controller.hpp
open_manipulator_p_controller/launch/: open_manipulator_p_controller.launch  open_manipulator_p_controller.launch.py  open_manipulator_p_moveit.launch
open_manipulator_p_controller/param/: open_manipulator_p_controller_params.yaml
open_manipulator_p_controller/scripts/: create_udev_rules
open_manipulator_p_controller/src/: open_manipulator_p_controller.cpp
open_manipulator_p_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_description/launch/: open_manipulator_p_rviz.launch  open_manipulator_p_rviz.launch.py  open_manipulator_p_upload.launch  open_manipulator_p_with_gripper_rviz.launch  open_manipulator_p_with_gripper_upload.launch
open_manipulator_p_description/meshes/: end_link.stl  gripper_link.stl  gripper_sub_link.stl  link2.stl  link4.stl  link_5.stl
open_manipulator_p_description/rviz/: open_manipulator_p_with_gripper.rviz
open_manipulator_p_description/urdf/: open_manipulator_p.gazebo.xacro  open_manipulator_p.transmission.xacro  open_manipulator_p.urdf.xacro  open_manipulator_p_robot.urdf.xacro  open_manipulator_p_with_gripper.gazebo.xacro  open_manipulator_p_with_gripper.transmission.xacro  open_manipulator_p_with_gripper.urdf.xacro  open_manipulator_p_with_gripper_robot.urdf.xacro
open_manipulator_p_libs/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_libs/include/open_manipulator_p_libs/: custom_trajectory.h  custom_trajectory.hpp  dynamixel.h  dynamixel.hpp  kinematics.h  kinematics.hpp  open_manipulator_p.h  open_manipulator_p.hpp
open_manipulator_p_libs/src/: custom_trajectory.cpp  dynamixel.cpp  kinematics.cpp  open_manipulator_p.cpp
open_manipulator_p_moveit/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_p_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_with_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_pro/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pro_base_module/: CMakeLists.txt  package.xml
open_manipulator_pro_base_module/config/: ini_pose.yaml
open_manipulator_pro_base_module/include/open_manipulator_pro_base_module/: base_module.h  robotis_state.h
open_manipulator_pro_base_module/src/: base_module.cpp  robotis_state.cpp
open_manipulator_pro_base_module_msgs/: CMakeLists.txt  package.xml
open_manipulator_pro_base_module_msgs/msg/: JointPose.msg  KinematicsPose.msg
open_manipulator_pro_base_module_msgs/srv/: GetJointPose.srv  GetKinematicsPose.srv
open_manipulator_pro_bringup/: CMakeLists.txt  package.xml
open_manipulator_pro_control_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pro_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pro_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pro_description/doc/: OpenMANIPULATOR_PRO_Mass_Property.xlsx
open_manipulator_pro_description/launch/: open_manipulator_pro_rviz.launch  open_manipulator_pro_rviz.launch.py
open_manipulator_pro_description/meshes/: grip_main_link.stl  link_1.stl  link_3.stl  link_6.stl
open_manipulator_pro_description/rviz/: open_manipulator_pro.rviz  open_manipulator_pro_with_gripper.rviz
open_manipulator_pro_description/urdf/: materials.xacro  open_manipulator_pro.gazebo  open_manipulator_pro.gazebo.xacro  open_manipulator_pro.urdf.xacro  open_manipulator_pro.xacro  open_manipulator_pro_with_gripper.gazebo  open_manipulator_pro_with_gripper.gazebo.xacro  open_manipulator_pro_with_gripper.urdf.xacro  open_manipulator_pro_with_gripper.xacro
open_manipulator_pro_gazebo/: CMakeLists.txt  package.xml
open_manipulator_pro_gazebo/config/: position_controller_pro.yaml  position_controller_pro_with_gripper.yaml
open_manipulator_pro_gazebo/launch/: open_manipulator_pro_gazebo.launch  position_controller_pro.launch  position_controller_pro_with_gripper.launch
open_manipulator_pro_gazebo/worlds/: empty.world
open_manipulator_pro_gui/: CMakeLists.txt  mainpage.dox  package.xml
open_manipulator_pro_gui/include/open_manipulator_pro_gui/: main_window.hpp  qnode.hpp
open_manipulator_pro_gui/src/: main.cpp  main_window.cpp  qnode.cpp
open_manipulator_pro_gui/ui/: main_window.ui
open_manipulator_pro_kinematics_dynamics/: CMakeLists.txt  package.xml
open_manipulator_pro_kinematics_dynamics/include/open_manipulator_pro_kinematics_dynamics/: link_data.h  open_manipulator_pro_kinematics_dynamics.h  open_manipulator_pro_kinematics_dynamics_define.h
open_manipulator_pro_kinematics_dynamics/src/: link_data.cpp  open_manipulator_pro_kinematics_dynamics.cpp
open_manipulator_pro_libs/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pro_manager/: CMakeLists.txt  package.xml
open_manipulator_pro_manager/config/: offset.yaml  open_manipulator_pro.robot  open_manipulator_pro_dxl_init.yaml  open_manipulator_pro_with_gripper.robot  open_manipulator_pro_with_gripper_dxl_init.yaml
open_manipulator_pro_manager/launch/: open_manipulator_pro_manager.launch  open_manipulator_pro_manager_gazebo.launch
open_manipulator_pro_manager/src/: open_manipulator_pro_manager.cpp
open_manipulator_pro_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+131 files in other folders)
