<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_p</name>
  <version>0.0.0</version>
  <description>
    ROS-enabled OpenManipulator-P is a full open source platform​.
    OpenManipulator-P allows users to control it more easily with MoveIt!.
    If you do not have a physical robot, you can still test your source code on the Gazebo simulator.
  </description>
  <license>Apache 2.0</license>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_p/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_p_control_gui</exec_depend>
  <exec_depend>open_manipulator_p_controller</exec_depend>
  <exec_depend>open_manipulator_p_description</exec_depend>
  <exec_depend>open_manipulator_p_libs</exec_depend>
  <exec_depend>open_manipulator_p_teleop</exec_depend>
  <export><metapackage/></export>
</package>
