<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_p</name>
  <version>2.2.0</version>
  <description>
    ROS 2 packages for open_manipulator_p.
  </description>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_p_controller</exec_depend>
  <exec_depend>open_manipulator_p_description</exec_depend>
  <exec_depend>open_manipulator_p_libs</exec_depend>
  <exec_depend>open_manipulator_p_teleop</exec_depend>
  <!-- To be added -->
  <!-- <exec_depend>open_manipulator_p_gui</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
