<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_p_controller</name>
  <version>2.2.0</version>
  <description>
    ROS 2 package for open_manipulator_p_controller.
  </description>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator_p_description</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/open_manipulator_p</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>open_manipulator_p_libs</depend>
  <depend>rclcpp</depend>
  <depend>robotis_manipulator</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
