<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_p_description</name>
  <version>1.0.0</version>
  <description>
    Package for OpenMANIPULATOR-P description
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_p_description</url>
  <url type="emanual">https://emanual.robotis.com/docs/en/platform/openmanipulator_p/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
</package>
