<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_p_libs</name>
  <version>2.0.1</version>
  <description>
    OpenManipulator library (Kinematics lib., Dynamixel lib., Drawing path lib.)
  </description>
  <license>Apache 2.0</license>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_p_libs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/open_manipulator_p</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_manipulator</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
</package>
