<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_pro</name>
  <version>0.3.1</version>
  <description>
    ROS packages for the OpenMANIPULATOR-PRO (metapackage)
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo-Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_pro</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_pro_base_module</exec_depend>
  <exec_depend>open_manipulator_pro_base_module_msgs</exec_depend>
  <exec_depend>open_manipulator_pro_bringup</exec_depend>
  <exec_depend>open_manipulator_pro_description</exec_depend>
  <exec_depend>open_manipulator_pro_gazebo</exec_depend>
  <exec_depend>open_manipulator_pro_gui</exec_depend>
  <exec_depend>open_manipulator_pro_kinematics_dynamics</exec_depend>
  <exec_depend>open_manipulator_pro_manager</exec_depend>
  <export><metapackage/></export>
</package>
