<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_pro</name>
  <version>1.0.0</version>
  <description>
    ROS2 packages for OpenManipulator-PRO.
  </description>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_pro_controller</exec_depend>
  <exec_depend>open_manipulator_pro_description</exec_depend>
  <exec_depend>open_manipulator_pro_libs</exec_depend>
  <exec_depend>open_manipulator_pro_teleop</exec_depend>
  <!-- To be added -->
  <!-- <exec_depend>open_manipulator_pro_control_gui</exec_depend> -->
  <!-- <exec_depend>open_manipulator_pro_moveit</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>