<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_pro_base_module</name>
  <version>0.3.1</version>
  <description>
    The open_manipulator_pro_base_module package
    This package describes basic function to control OpenMANIPULATOR-PRO
    This module is based on position control.
    We provides joint space and task space control (forward kinematics, inverse kinematics).
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo-Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_pro</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>open_manipulator_pro_base_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>robotis_framework_common</depend>
  <depend>open_manipulator_pro_kinematics_dynamics</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
