<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_pro_base_module_msgs</name>
  <version>0.3.1</version>
  <description>
    The open_manipulator_pro_base_module_msgs package
    This package includes ROS messages and services for open_manipulator_pro_base_module_msgs
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo-Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_pro</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
