<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_pro_gui</name>
  <version>0.3.1</version>
  <description>
    The open_manipulator_pro_gui package
    This package provides simple GUI to control ROBOTIS MANIPULATOR-H.
    This GUI is connected to open_manipulator_pro_base_module.
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo-Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_pro</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>open_manipulator_pro_base_module_msgs</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
</package>
