<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_pro_manager</name>
  <version>0.3.1</version>
  <description>
    The open_manipulator_pro_manager package
    This package describes robot manager to execute open_manipulator_pro_base_module.
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo-Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_pro</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator_pro/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller</depend>
  <depend>open_manipulator_pro_base_module</depend>
</package>
